# due-diligence-app

./: pyproject.toml  requirements.txt
backend/: main.py
backend/core/: init_model.py
backend/models/: request_models.py
backend/routers/: news.py
backend/services/: utils.py
frontend/: app.py
